# weekly_harness

./: .env.example  .gitignore  CLAUDE.md  README.md  analyze_10x_fcf.py  analyze_800div_ex_right_recovery.py  analyze_entry_timing.py  analyze_fcf_ev_level.py  analyze_fcf_mv_ev_ratio.py  analyze_gainer_fundamentals.py  analyze_integrity_zz800.py  analyze_sector_comparison.py  analyze_sector_concentration.py  analyze_style_drift.py  analyze_style_drift_sp500.py  annual_summary.py  b_version_review.py  backtest_all800.py  backtest_baggers_scoring.py  backtest_compare.py  backtest_compare_v2.py  backtest_etf_top.py  backtest_fcf.py  backtest_filtered.py  backtest_roe8.py  backtest_zz800_fcf_fixed.py  backtest_zz800_fcf_fixed_v2.py  build_eligibility.py  build_hs300_synthetic.py  cache_adj_close.py  compare_marlboro.py  compute_d_buffer_nav.py  compute_fixed_nav.py  compute_hs300_fixed_nav.py  compute_hs300_lenient_nav.py  compute_nav_cached.py  csi300_universe.py  csi500_universe.py  diagnose_data_coverage.py  diagnose_zz800_fcf_data.py  (+123 more)
analysis/: b_vs_x_comparison.py  dividend_reinvest_931644.py  fund_tracker.py  hkex_connect_revenue_correlation.py  index_backtest.py  quarterly_holdings_analysis.py  sp500_top100_contrib.py  tracker_config.py  x_equal_weight_backtest.py
cache/: manifest.json
config/: settings.py
data/: 932366_daily.csv  932366_daily_000932.csv  932368_daily.csv  annual_siegel_summary.md  csi_dividend_daily.csv  csi_dividend_total_return.csv  fcf_baskets_300_top50_annual.json  hs300_daily.csv  hs300_total_return.csv  marlboro_all_a.csv  (+26 more)
(+4807 files in other folders)
