[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "weekly-harness"
version = "1.0.0"
description = "红利周期轮动投资周度评估系统"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0,<3.0.0",
    "numpy>=1.23.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "tushare>=1.4.0,<2.0.0",
    "matplotlib>=3.7.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.setuptools.packages.find]
include = ["weekly_harness*", "config*"]
